--- a/_posts/0000-01-02-ADWrobo.md
+++ b/_posts/0000-01-02-ADWrobo.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+What do you get when you cross a bear with a duck? A beak!
 Use the left arrow to go back!
